--- a/client/src/Components/CardRecipe.css
+++ b/client/src/Components/CardRecipe.css
@@ -7,12 +7,12 @@
   margin-bottom: 15px;
 }
 
-#closeIcon {
+/* #closeIcon {
   display: flex;
   justify-content: flex-end;
   margin-right: 8px;
   margin-top: 8px;
-}
+} */
 
 .card-body {
   margin-top: 0px !important;
