--- a/client/src/Components/Main.css
+++ b/client/src/Components/Main.css
@@ -1,15 +1,27 @@
 .container {
   display: flex;
   height: 100vh;
+  min-width: 100vh;
   background-image: url(https://media.istockphoto.com/photos/healthy-food-clean-eating-selection-picture-id854725402?b=1&k=20&m=854725402&s=170667a&w=0&h=7UZy4Yz-RVlnU3u-74ZwmBb86IyZSKV_SKowq4ZGtfY=);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   background-color: blue;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
 }
 
 .title-container {
   display: flexbox;
   justify-content: center;
   align-items: center;
+  font-family: Macondo;
+  font-weight: 1000;
+  font-size: 60px;
+}
+
+.btn-start {
+  padding: 10px 15px;
+  font-size: 20px;
 }
